--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/web3": "^1.2.2",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
